UI - Fixed reply alignment

--- a/UI/stylesheet.css
+++ b/UI/stylesheet.css
@@ -80,6 +80,6 @@ input[type="text"] {
 }
 
 .reply{
-    width: 92%;
+    width: 93%;
     float: right;
 }
